[tool.poetry]
name = "twaddle"
version = "0.1.0"
description = ""
authors = ["daniel-mcclintock <13973653+daniel-mcclintock@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
peewee = "^3.14.4"
peewee-migrate = "^1.4.6"
arrow = "^1.1.1"
twint = { git = "https://github.com/twintproject/twint.git"}

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
